<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.SongSpeech.impromptu.New_alarm$PlaceholderFragment" >

   	<TimePicker 
   	    android:paddingTop="15dp"
   	    android:id="@+id/new_alarm_time"
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_centerHorizontal="true"/>
   	<LinearLayout 
   	    android:id="@+id/row_one_days"
   	    android:layout_below="@+id/new_alarm_time"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content" 
   	    android:orientation="horizontal"
   	    android:paddingTop="25dp"
   	    > 

		<Space
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:layout_weight="1" />

	   	<ToggleButton
	   	    android:id="@+id/toggle_monday"
	   	    android:layout_width="0dp"
	   	    android:layout_height="match_parent"
	   	    android:layout_weight="1"
	   	    android:textOn="@string/alarm_monday"
	   	    android:textOff="@string/alarm_monday" />

	   	<ToggleButton 
	   	    android:id="@+id/toggle_tuesday"
	   	    android:layout_width="0dp"
	   	    android:layout_weight="1"
	   	    android:layout_height="match_parent"
	   	    android:textOff="@string/alarm_tuesday"
	   	    android:textOn="@string/alarm_tuesday"/>

	   	<ToggleButton
	   	    android:id="@+id/toggle_wednesday"
	   	    android:layout_width="0dp"
	   	    android:layout_height="match_parent"
	   	    android:layout_weight="1"
	   	    android:textOff="@string/alarm_wednesday"
	   	    android:textOn="@string/alarm_wednesday" />
	   	
		<Space
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:layout_weight="1" />
   	</LinearLayout>
   	<LinearLayout 
   	    android:id="@+id/row_two_days"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:orientation="horizontal"
   	    android:paddingTop="25dp"
   	    android:layout_below="@id/row_one_days"
   	    >
   	 	<ToggleButton
	   	    android:id="@+id/toggle_thursday"
	   	    android:layout_width="0dp"
	   	    android:layout_height="match_parent"
	   	    android:layout_weight="1"
	   	    android:textOff="@string/alarm_thursday"
	   	    android:textOn="@string/alarm_thursday" />
	   	<ToggleButton
	   	    android:id="@+id/toggle_friday"
	   	    android:layout_width="0dp"
	   	    android:layout_height="match_parent"
	   	    android:layout_weight="1"
	   	    android:textOff="@string/alarm_friday"
	   	    android:textOn="@string/alarm_friday" />
	   	<ToggleButton
	   	    android:id="@+id/toggle_saturday"
	   	    android:layout_width="0dp"
	   	    android:layout_height="match_parent"
	   	    android:layout_weight="1"
	   	    android:textOff="@string/alarm_saturday"
	   	    android:textOn="@string/alarm_saturday" />
	   	<ToggleButton
	   	    android:id="@+id/toggle_sunday"
	   	    android:layout_width="0dp"
	   	    android:layout_height="match_parent"
	   	    android:layout_weight="1"
	   	    android:textOff="@string/alarm_sunday"
	   	    android:textOn="@string/alarm_sunday" />
	   	</LinearLayout>

   	<Button
   	    android:id="@+id/alarm_submit"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_below="@+id/row_two_days"
   	    android:layout_centerHorizontal="true"
   	    android:layout_marginTop="26dp"
   	    android:text="@string/alarm_submit" />
	<CheckedTextView 
	    android:id="@+id/alarm_check_recursivealarm"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/alarm_submit"
	    android:layout_centerHorizontal="true"
	    android:text="@string/alarm_text_recursive"
	    android:clickable="true"
	    android:checked="true"
	    android:layout_marginTop="20dp"/>
	<CheckBox 
	    android:id="@+id/alarm_recurssive"
	    android:layout_toLeftOf="@id/alarm_check_recursivealarm"
	    android:layout_alignBaseline="@id/alarm_check_recursivealarm"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    />
</RelativeLayout>
