<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

	<TextView
	    android:id="@+id/titleText"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:text="@string/app_name"
	    android:textSize="30sp"
	    android:textStyle="bold"
	    android:layout_marginTop="15dp"
	    android:layout_marginBottom="200dp" />
    <Button
        android:id="@+id/words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/words"
        android:textAlignment="center" />

    <Button
        android:id="@+id/phrases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/words"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/phrases"
        android:textAlignment="center" />

</RelativeLayout>
