<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
   
	<TextView
	    android:id="@+id/alarm_message"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_centerVertical="true"
	    android:textAlignment="center"
	    android:text="@string/alarm_tutorial"
	     />
	<LinearLayout 
	    android:id="@+id/alarm_preview_layout"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:orientation="vertical"
	    android:layout_centerHorizontal="true"
	    android:layout_centerVertical="true"
	    >

	    <AnalogClock
	        android:id="@+id/alarm_analog_clock"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="2" 
	        android:layout_gravity="center_horizontal">

		</AnalogClock>

		<TextView
		    android:id="@+id/alarm_analog_clock_time"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:layout_gravity="center_horizontal"
		    android:text="@string/alarm_analog_clock_time"
		    android:layout_marginTop="15dp" />
		<Button 
		    android:id="@+id/alarm_delete_alarm"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/alarm_delete_alarm"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="15dp"
		    />

	</LinearLayout>

	<Button
	    android:id="@+id/alarm_modify_alarm"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="100dp"
	    android:layout_below="@id/alarm_message"
	    android:layout_centerHorizontal="true"
	    android:text="@string/alarm_create_new_alarm_button" />

 </RelativeLayout>
